Style;Prevents search bar from wrapping

--- a/src/components/toolbar/style.css
+++ b/src/components/toolbar/style.css
@@ -1,7 +1,7 @@
 /* 'tpp' stands for 'Tree Panel Plugin' just to make it unique from Grafana class names. */
 .tpp-toolbar {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   gap: 10px;
   align-items: center;
   margin: 0px 4px;
